tests/error/invalid_cast.gw
#! [contains] can't cast
class C {}
class D {}
var D d;
d $ C;
